Fixed the mobile-layout issue for the logo.

--- a/app/app.css
+++ b/app/app.css
@@ -39,7 +39,7 @@ footer {
 }
 
 #login-logo-container {
-  margin: 10vh 0vw 0vh;
+  margin: 2vh 0vw 0vh;
 
   font-size: 7em;
   text-align: center;
